2003-04-26  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.h (TC_FORCE_RELOCATION_SUB_SAME): Define again.

2003-04-25  Chris Demetriou  <cgd@broadcom.com>

	* NEWS: Belatedly mention support for MIPS32 Release 2.

2003-04-24  Eric Christopher  <echristo@redhat.com>

	* config/tc-mips.c (nopic_need_relax): Revert previous
	change.

2003-04-24 Dhananjay Deshpande <dhananjayd@kpitcummins.com>

	* config/tc-h8300.h (DWARF2_LINE_MIN_INSN_LENGTH): New
	* config/tc-h8300.c (dwarf2dbg.h): Include
	(md_pseudo_table): Handle .loc and .file
	(md_assemble): Call dwarf2_emit_insn if BFD_ASSEMBLER.
	* Makefile.am: Add dependency on dwarf2dbg.h for h8300 targets.
	* Makefile.in: Regenerate.

2003-04-24 Dhananjay Deshpande <dhananjayd@kpitcummins.com>

	* config/tc-h8300.c (Nmode, h8300hnmode, h8300snmode): New.
	(md_pseudo_table): Add h8300hn, h8300sn.
	* config/tc-h8300.h (COFF_MAGIC): Handle h8300hn, h8300sn.
	* doc/c-h8300.texi : Add documentation for new machine directives.

2003-04-24  Nick Clifton  <nickc@redhat.com>

	* config/tc-ppc.c (ppc_symbol_chars): Define.
	* config/tc-ppc.h (tc_symbol_chars): Define.

2003-04-23  J"orn Rennecke <joern.rennecke@superh.com>

	* config/tc-sh.c: Amend comment to refer to SuperH.
	* config/tc-sh.h: Likewise.
	(LISTING_HEADER): Amend to refer to SuperH.
	* config/tc-sh64.c: Change comment to refer to SuperH.
	* config/tc-sh64.h (LISTING_HEADER): Change to refer to SuperH.
	* doc/as.texinfo [SH, GENERIC]: Amend / Change to refer to SuperH.
	* doc/c-sh.texi: Amend to refer to SuperH.
	Add SuperH architecture documentation references.
	* doc/c-sh64.texi: Change to refer to SuperH.

2003-04-23  H.J. Lu <hjl@gnu.org>

	* app.c (do_scrub_chars): More checks for valid labels.

2003-04-22  H.J. Lu <hjl@gnu.org>

	* app.c (do_scrub_chars): Check for valid label.

2003-04-22  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>

	* doc/as.texinfo: Replace references to Mitsubishi M32R with
	references to Renesas M32R.