@@ -1,3 +1,8 @@
+2003-04-28  H.J. Lu <hjl@gnu.org>
+
+	* config/tc-hppa.c (hppa_symbol_chars): New.
+	* config/tc-hppa.h (tc_symbol_chars): Likewise.
+
 2003-04-26  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>
 
 	* config/tc-mips.h (TC_FORCE_RELOCATION_SUB_SAME): Define again.
